--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = py27
 
 [testenv]
-deps=pytest       # PYPI package providing py.test
+deps=pytest
 commands=
   py.test \
           tests/ {posargs} # substitute with tox' positional arguments
