add python3 and lint checks.

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,37 @@
 [tox]
-envlist = py27
+envlist = py{27,37}, lint
+recreate = True
 
 [testenv]
-deps=pytest
-commands=
-  py.test \
-          tests/ {posargs} # substitute with tox' positional arguments
+usedevelop = True
+deps =
+  pytest
+  pytest-cov
+  future
+  coverage_pth
+  coverage
+commands =
+  pytest tests --cov delnone --cov-report= {posargs}
+  - coverage combine --append
+  coverage report -m
+  coverage html -i
+
+
+[testenv:lint]
+deps =
+    yapf
+    isort
+
+commands =
+    yapf -d --recursive delnone
+    isort --check-only --recursive delnone
+
+[coverage:run]
+branch = True
+source = delnone
+parallel = True
+
+[coverage:paths]
+source =
+    .
+    */site-packages
